README:  - Added "how to run the application" guide